API: Add router endpoint examples
